...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/oorb_space_12">

        <RadioButton
            android:id="@+id/radio_period_standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/oorb_touch_target_min"
            android:text="@string/template_standard_label"
            android:layout_marginBottom="@dimen/oorb_space_8" />

...
        android:layout_height="wrap_content"
        android:text="@string/period_onboarding_reminder"
        android:textAppearance="@style/TextAppearance.OORB.Caption"
        android:layout_marginBottom="@dimen/oorb_space_16" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/period_onboarding_confirm"
        style="@style/OORBPrimaryDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period_onboarding_confirm"
        app:backgroundTint="@null" />

...
