...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oor_percent"
            android:layout_alignParentStart="true"
            android:textColor="@color/text_secondary_adaptive"/>
        <TextView
            android:id="@+id/oor_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10.0%"
            android:textColor="@color/text_primary_adaptive"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/stats_oor_percentage_label"
...
